[package]
name = "apitester"
version = "1.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
futures = "0.3.32"
hdrhistogram = "7.5.4"
humantime = "2.3.0"
humantime-serde = "1.1.1"
regex = "1.12.3"
reqwest = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time", "sync", "macros"] }
url = "2.5.8"

[dev-dependencies]
tokio-test = "0.4.5"
wiremock = "0.6.5"
